--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title>Do you have the time?</title>
+    <title>Do you want to be the very best?</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -9,6 +9,55 @@
     <script type="text/javascript" src="js/scripts.js"></script>
   </head>
   <body>
-
+    <h1>Where do you belong?</h1>
+    <div class="questions">
+      <form>
+        <select class="form-control">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
+        <select class="form-control">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
+        <select class="form-control">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
+        <select class="form-control">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
+        <select class="form-control">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
+        <select class="form-control">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
+      </form>
+      <div class="pikachu">
+        <h3>it is likely that you identify with PIKACHU!</h3>
+        <p>Pikachu is fun loving, always adorable, while being little mischevious! He loves all thins electric!</p>
+        <img src="https://i.ytimg.com/vi/S6tXe8iafgo/maxresdefault.jpg" alt="pikachu">
+      </div>
+      <div class="bulbasaur">
+        <h3>it is likely that you identify with BULBASAUR!</h3>
+        <p>Bulbasaur is a pragmatic and cute dual type pokemon, he has abilities in both poison and grass. This particular species is known to be very nurturing and are extremely loyal. </p>
+        <img src="https://vignette.wikia.nocookie.net/pokemon/images/1/19/Ash_Bulbasaur.png/revision/latest?cb=20170914224503" alt="bulbasaur">
+      </div>
+      <div class="squirtle">
+        <h3>it is likely that you identify with SQUIRTLE!</h3>
+        <p>Squirtle is very obviously the coolest pokemon in the whole pokedex. Squirtle typically hangs out with a group of his own water type pokemon, known as the Squirtle Squad.</p>
+        <img src="https://orig00.deviantart.net/e5b6/f/2016/216/f/e/13932095_10210635844152254_1647572662_o_2_by_jenbegeman-dacmfmw.gif" alt="squirtle squad">
+      </div>
+    </div>
   </body>
 </html>
