add the questions in html.

--- a/index.html
+++ b/index.html
@@ -9,54 +9,68 @@
     <script type="text/javascript" src="js/scripts.js"></script>
   </head>
   <body>
-    <h1>Where do you belong?</h1>
-    <div class="questions">
-      <form>
-        <select class="form-control">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
-        <select class="form-control">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
-        <select class="form-control">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
-        <select class="form-control">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
-        <select class="form-control">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
-        <select class="form-control">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
-      </form>
-      <div class="pikachu">
-        <h3>it is likely that you identify with PIKACHU!</h3>
-        <p>Pikachu is fun loving, always adorable, while being little mischevious! He loves all thins electric!</p>
-        <img src="https://i.ytimg.com/vi/S6tXe8iafgo/maxresdefault.jpg" alt="pikachu">
-      </div>
-      <div class="bulbasaur">
-        <h3>it is likely that you identify with BULBASAUR!</h3>
-        <p>Bulbasaur is a pragmatic and cute dual type pokemon, he has abilities in both poison and grass. This particular species is known to be very nurturing and are extremely loyal. </p>
-        <img src="https://vignette.wikia.nocookie.net/pokemon/images/1/19/Ash_Bulbasaur.png/revision/latest?cb=20170914224503" alt="bulbasaur">
-      </div>
-      <div class="squirtle">
-        <h3>it is likely that you identify with SQUIRTLE!</h3>
-        <p>Squirtle is very obviously the coolest pokemon in the whole pokedex. Squirtle typically hangs out with a group of his own water type pokemon, known as the Squirtle Squad.</p>
-        <img src="https://orig00.deviantart.net/e5b6/f/2016/216/f/e/13932095_10210635844152254_1647572662_o_2_by_jenbegeman-dacmfmw.gif" alt="squirtle squad">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Who are you?</h1>
+          <p>have you always wanted to know who you truly are? This quiz will help you.</p>
+          <div class="questions">
+            <form>
+              <h3>What is favorite your season?</h3>
+              <select class="form-control" id="season">
+                <option value="1">Summer</option>
+                <option value="2">Spring</option>
+                <option value="3">Winter</option>
+              </select>
+              <h3>If you had to choose one accessory, what would it be?</h3>
+              <select class="form-control" id="accessory">
+                <option value="1">Baseball Cap</option>
+                <option value="2">Scarf</option>
+                <option value="3">Sunglasses</option>
+              </select>
+              <h3>What is your favorite cusine?</h3>
+              <select class="form-control" id="cuisine">
+                <option value="1">BBQ</option>
+                <option value="2">Vegetarian</option>
+                <option value="3">Sushi</option>
+              </select>
+              <h3>If you saw an opportunity to play a prank on some one would you:</h3>
+              <select class="form-control" id="prank">
+                <option value="1">Jump on the first chance you get.</option>
+                <option value="2">Warn the person of how susceptible you are.</option>
+                <option value="3">Gather your friends to help you pull it off.</option>
+              </select>
+              <h3>What is your favorite way to relax?</h3>
+              <select class="form-control" id="relax">
+                <option value="1">Getting snacks with my best friend.</option>
+                <option value="2">Hanging outdoors</option>
+                <option value="3">Taking a bubble bath.</option>
+              </select>
+              <h3>What would be the most exciting place you could live?</h3>
+              <select class="form-control" id="live">
+                <option value="1">In a treehouse.</option>
+                <option value="2">In a chalet in a meadow.</option>
+                <option value="3">Deep under the sea.</option>
+              </select>
+            </form>
+          </div>
+            <div id="pikachu">
+              <h3>it is likely that you identify with PIKACHU!</h3>
+              <p>Pikachu is fun loving, always adorable, while being little mischevious! He loves all thins electric!</p>
+              <img src="https://i.ytimg.com/vi/S6tXe8iafgo/maxresdefault.jpg" alt="pikachu">
+            </div>
+            <div id="bulbasaur">
+              <h3>it is likely that you identify with BULBASAUR!</h3>
+              <p>Bulbasaur is a pragmatic and cute dual type pokemon, he has abilities in both poison and grass. This particular species is known to be very nurturing and are extremely loyal. </p>
+              <img src="https://vignette.wikia.nocookie.net/pokemon/images/1/19/Ash_Bulbasaur.png/revision/latest?cb=20170914224503" alt="bulbasaur">
+            </div>
+            <div id="squirtle">
+              <h3>it is likely that you identify with SQUIRTLE!</h3>
+              <p>Squirtle is very obviously the coolest pokemon in the whole pokedex. Squirtle typically hangs out with a group of his own water type pokemon, known as the Squirtle Squad.</p>
+              <img src="https://orig00.deviantart.net/e5b6/f/2016/216/f/e/13932095_10210635844152254_1647572662_o_2_by_jenbegeman-dacmfmw.gif" alt="squirtle squad">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
