add the javascript logic to the project

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 <option value="2">In a chalet in a meadow.</option>
                 <option value="3">Deep under the sea.</option>
               </select>
+              <br>
+              <button class="btn btn-info" type="submit" value="submit">SUBMIT</button>
             </form>
           </div>
             <div id="pikachu">
