add some comments to explain javascript and jquery logic, and took out the first question.

--- a/index.html
+++ b/index.html
@@ -16,41 +16,35 @@
           <p>have you always wanted to know who you truly are? This quiz will help you.</p>
           <div class="questions">
             <form>
-              <h3>What is favorite your season?</h3>
-              <select class="form-control" id="season">
-                <option value="1">Summer</option>
-                <option value="2">Spring</option>
-                <option value="3">Winter</option>
-              </select>
               <h3>If you had to choose one accessory, what would it be?</h3>
               <select class="form-control" id="accessory">
-                <option value="1">Baseball Cap</option>
-                <option value="2">Scarf</option>
-                <option value="3">Sunglasses</option>
+                <option value="1" class="a">Baseball Cap</option>
+                <option value="2" class="b">Scarf</option>
+                <option value="3" class="c">Sunglasses</option>
               </select>
               <h3>What is your favorite cusine?</h3>
               <select class="form-control" id="cuisine">
-                <option value="1">BBQ</option>
-                <option value="2">Vegetarian</option>
-                <option value="3">Sushi</option>
+                <option value="1" class="a">BBQ</option>
+                <option value="2" class="b">Vegetarian</option>
+                <option value="3" class="c">Sushi</option>
               </select>
               <h3>If you saw an opportunity to play a prank on some one would you:</h3>
               <select class="form-control" id="prank">
-                <option value="1">Jump on the first chance you get.</option>
-                <option value="2">Warn the person of how susceptible you are.</option>
-                <option value="3">Gather your friends to help you pull it off.</option>
+                <option value="1" class="a">Jump on the first chance you get.</option>
+                <option value="2" class="b">Warn the person of how susceptible you are.</option>
+                <option value="3" class="c">Gather your friends to help you pull it off.</option>
               </select>
               <h3>What is your favorite way to relax?</h3>
               <select class="form-control" id="relax">
-                <option value="1">Getting snacks with my best friend.</option>
-                <option value="2">Hanging outdoors</option>
-                <option value="3">Taking a bubble bath.</option>
+                <option value="1" class="a">Getting snacks with my best friend.</option>
+                <option value="2" class="b">Hanging outdoors</option>
+                <option value="3" class="c">Taking a bubble bath.</option>
               </select>
               <h3>What would be the most exciting place you could live?</h3>
               <select class="form-control" id="live">
-                <option value="1">In a treehouse.</option>
-                <option value="2">In a chalet in a meadow.</option>
-                <option value="3">Deep under the sea.</option>
+                <option value="1" class="a">In a treehouse.</option>
+                <option value="2" class="b">In a chalet in a meadow.</option>
+                <option value="3" class="c">Deep under the sea.</option>
               </select>
               <br>
               <button class="btn btn-info" type="submit" value="submit">SUBMIT</button>
