--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <h3>If you saw an opportunity to play a prank on some one would you:</h3>
               <select class="form-control" id="prank">
                 <option value="1" class="a">Jump on the first chance you get.</option>
-                <option value="2" class="b">Warn the person of how susceptible you are.</option>
+                <option value="2" class="b">Warn the person of how susceptible they are.</option>
                 <option value="3" class="c">Gather your friends to help you pull it off.</option>
               </select>
               <h3>What is your favorite way to relax?</h3>
@@ -58,12 +58,12 @@
             </div>
             <div id="bulbasaur">
               <h3>it is likely that you identify with BULBASAUR!</h3>
-              <p>Bulbasaur is a pragmatic and cute dual type pokemon, he has abilities in both poison and grass. This particular species is known to be very nurturing and are extremely loyal. </p>
+              <p>Bulbasaur is a pragmatic and cute dual type pokemon, he has abilities in both poison and grass. This particular species is known to be very nurturing and extremely loyal. </p>
               <img src="https://vignette.wikia.nocookie.net/pokemon/images/1/19/Ash_Bulbasaur.png/revision/latest?cb=20170914224503" alt="bulbasaur">
             </div>
             <div id="squirtle">
               <h3>it is likely that you identify with SQUIRTLE!</h3>
-              <p>Squirtle is very obviously the coolest pokemon in the whole pokedex. Squirtle typically hangs out with a group of his own water type pokemon, known as the Squirtle Squad.</p>
+              <p>Squirtle is very obviously the coolest pokemon in the whole pokedex. Squirtle typically hangs out with a group of other squirtles, known as the Squirtle Squad.</p>
               <img src="https://orig00.deviantart.net/e5b6/f/2016/216/f/e/13932095_10210635844152254_1647572662_o_2_by_jenbegeman-dacmfmw.gif" alt="squirtle squad">
             </div>
           </div>
